--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flask pyinstaller
+          pip install flask requests selenium pandas psutil pyngrok google-generativeai pysimplegui pyinstaller webdriver-manager
 
       - name: Build with PyInstaller
         run: |
