--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,14 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
+      # Linux-specific dependencies for PyInstaller
+      - name: Install Linux build tools
+        if: matrix.os == 'ubuntu-22.04'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y python3-dev python3-tk libglib2.0-dev libnss3 libatk-bridge2.0-0 libx11-xcb1 patchelf
+
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install flask requests selenium pandas psutil pyngrok google-generativeai pysimplegui pyinstaller webdriver-manager
