--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,18 +33,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install \
-            flask \
-            requests \
-            selenium \
-            pandas \
-            psutil \
-            pyngrok \
-            google-generativeai \
-            pysimplegui \
-            pyinstaller \
-            webdriver-manager \
-            --extra-index-url https://PySimpleGUI.net/install
+          pip install flask requests selenium pandas psutil pyngrok google-generativeai pysimplegui pyinstaller webdriver-manager --extra-index-url https://PySimpleGUI.net/install
 
       - name: Build with PyInstaller
         run: |
