--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install flask requests selenium pandas psutil google-generativeai pyinstaller
-          python -m pip install --force-reinstall PySimpleGUI --extra-index-url https://PySimpleGUI.net/install
+          pip install flask requests selenium pandas psutil pyngrok google-generativeai pyinstaller webdriver-manager
+          python -m pip install --force-reinstall --extra-index-url https://PySimpleGUI.net/install PySimpleGUI
 
       - name: Build with PyInstaller
         run: |
