--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,15 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y python3-dev python3-tk libglib2.0-dev libnss3 libatk-bridge2.0-0 libx11-xcb1 patchelf
 
+      # macOS-specific dependencies for PyInstaller
+      - name: Install macOS build tools
+        if: matrix.os == 'macos-latest'
+        run: |
+          # Ensure Xcode CLI tools are installed
+          xcode-select --install || true
+          # Optional: install tcl-tk if Tkinter issues appear
+          brew install tcl-tk || true
+
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
@@ -38,7 +47,7 @@ jobs:
 
       - name: Build with PyInstaller
         run: |
-          pyinstaller --onefile client_bot.py
+          pyinstaller --onefile --windowed client_bot.py
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
